added responsive design

--- a/client/src/css/SubmitPage.scss
+++ b/client/src/css/SubmitPage.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald|PT+Sans&subset=latin-ext');
 .submitPage-container {
+  animation: fadein 0.8s;
   font-family: 'PT Sans', sans-serif;
   font-size: 2rem;
   display: flex;
