--- a/client/src/css/Form.scss
+++ b/client/src/css/Form.scss
@@ -1,9 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald&subset=latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Oswald|PT+Sans&subset=latin-ext');
 .form-generator {
+  animation: fadein 0.8s;
   h1 {
     font-family: 'Oswald', sans-serif;
     font-size: 6rem;
+    @media only screen and (max-width: 64.25em) {
+      font-size: 4rem;
+    }
+    @media only screen and (max-width: 39em) {
+      font-size: 3rem;
+    }
   }
   font-family: 'PT Sans', sans-serif;
   min-height: 70rem;
@@ -14,9 +21,15 @@
     min-height: 10vh;
     padding: 5rem;
   }
+
   &-2 {
+    @media only screen and (max-width: 64.25em) {
+      flex-direction: column;
+
+      height: 30vh;
+      align-items: center;
+    }
     display: flex;
-    flex-direction: row;
     width: 100%;
     justify-content: center;
     height: 10vh;
@@ -25,12 +38,34 @@
       display: flex;
       justify-content: space-around;
       width: 50%;
+      @media only screen and (max-width: 64.25em) {
+        flex-direction: column;
+        height: 15vh;
+        align-items: center;
+      }
+      @media only screen and (max-width: 39em) {
+        height: 25vh;
+        width: 12rem;
+        margin-bottom: 5rem;
+      }
     }
   }
   &-3 {
-    width: 85rem;
+    max-width: 85rem;
     height: 10rem;
+    align-items: space-around;
+
     form {
+      @media only screen and (max-width: 64.25em) {
+        width: none;
+        flex-direction: column;
+        align-items: center;
+        height: 40vh;
+      }
+      @media only screen and (max-width: 39em) {
+        margin-bottom: 5rem;
+        justify-content: center;
+      }
       display: flex;
       justify-content: space-around;
     }
@@ -60,8 +95,13 @@
     border-radius: 0.3rem;
   }
   &-4 {
+    @media only screen and (max-width: 64.25em) {
+      margin-top: 15rem;
+    }
     border: solid black 2px;
-
+    @media only screen and (max-width: 39em) {
+      border: none;
+    }
     display: flex;
     flex-direction: column;
     justify-content: space-between;
