--- a/client/src/css/SubmissionPage.scss
+++ b/client/src/css/SubmissionPage.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald|PT+Sans&subset=latin-ext');
 .submission-container {
+  animation: fadein 0.8s;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
